...
                                        <include reference="9Zf-tI-8iP"/>
                                        <exclude reference="Shx-Bq-hs4"/>
                                        <include reference="eu4-WH-f8T"/>
                                    </mask>
                                </variation>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Identifier" textAlignment="natural" minimumFontSize="17" background="Image-1" translatesAutoresizingMaskIntoConstraints="NO" id="2Ao-RW-toU">
                                <rect key="frame" x="61" y="465" width="267" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="6NI-yB-m0T"/>
                                </constraints>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                <variation key="heightClass=regular-widthClass=compact">
                                    <mask key="constraints">
                                        <include reference="6NI-yB-m0T"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ph7-fi-6OF">
                                <rect key="frame" x="61" y="509" width="267" height="30"/>
                                <animations/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
...
                                    </mask>
                                </variation>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2EI-Zr-qs5">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <animations/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <segue destination="4b4-HP-21k" kind="show" id="Zzo-7z-CH9"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S4o-zn-IdC">
                                <rect key="frame" x="65" y="442" width="484" height="30"/>
...
                                </variation>
                            </stackView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image-2" translatesAutoresizingMaskIntoConstraints="NO" id="Aiu-w3-I8L">
                                <rect key="frame" x="58" y="480" width="499" height="91"/>
                                <animations/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take Me Home!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G64-0p-dpC">
                                <rect key="frame" x="207" y="508" width="200" height="35"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="f5X-Yj-hJj"/>
                                    <constraint firstAttribute="width" constant="200" id="nVS-mb-wF4"/>
                                </constraints>
...
                                        <rect key="frame" x="0.0" y="193" width="662" height="113"/>
                                        <animations/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="300" id="ShP-RK-725"/>
                                            <constraint firstAttribute="height" constant="45" id="TOm-lA-jZh"/>
                                        </constraints>
                                        <state key="normal" title="Sign Me Up!" backgroundImage="button">
                                            <color key="titleColor" red="0.99607843137254903" green="0.95686274509803926" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="ShP-RK-725"/>
                                                <exclude reference="TOm-lA-jZh"/>
...
